[workspace.package]
name = "naskanutil"
license = "MIT"
version = "25.8.21"
edition = "2021"
description = "NaskanUtil: distro-agnostic toolbox designed to simplify everyday Linux tasks"

[workspace]
members = ["tui", "core", "xtask"]
default-members = ["tui", "core"]
resolver = "2"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
